apps/base/prometheus/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prometheus
  labels:
    replicator.v1.mittwald.de/secret: default/default-samsonnguyen-ca
