apps/base/prometheus/grafana-ingress-route.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-ingress
spec:
  entryPoints:
    - websecure
  routes:
    - match:
      kind: Rule
      services:
        - name: kube-prometheus-stack-grafana
          port: 80
          namespace: prometheus
      middlewares:
      - name: sso
        namespace: traefik
      - name: redirect-scheme
        namespace: traefik
  tls:
    secretName: wildcard-samsonnguyen-ca
